tests/ui/imports/ambiguous-import-visibility-globglob.stderr
error: ambiguous import visibility: pub or pub(in crate::min_vis_first)
  --> $DIR/ambiguous-import-visibility-globglob.rs:10:19
   |
LL |     pub use self::S as S1;
   |                   ^
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `S` could refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:8:13
   |
LL |     pub use crate::m::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
note: `S` could also refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:6:9
   |
LL |     use crate::m::*;
   |         ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #149145 <https://github.com/rust-lang/rust/issues/149145>
   = note: `#[deny(ambiguous_import_visibilities)]` (part of `#[deny(future_incompatible)]`) on by default

error: ambiguous import visibility: pub(crate) or pub(in crate::min_vis_first)
  --> $DIR/ambiguous-import-visibility-globglob.rs:13:26
   |
LL |     pub(crate) use self::S as S2;
   |                          ^
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `S` could refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:8:13
   |
LL |     pub use crate::m::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
note: `S` could also refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:6:9
   |
LL |     use crate::m::*;
   |         ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #149145 <https://github.com/rust-lang/rust/issues/149145>

error: ambiguous import visibility: pub or pub(in crate::mid_vis_first)
  --> $DIR/ambiguous-import-visibility-globglob.rs:24:19
   |
LL |     pub use self::S as S1;
   |                   ^
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `S` could refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:22:13
   |
LL |     pub use crate::m::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
note: `S` could also refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:21:9
   |
LL |     use crate::m::*;
   |         ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #149145 <https://github.com/rust-lang/rust/issues/149145>

error: ambiguous import visibility: pub(crate) or pub(in crate::mid_vis_first)
  --> $DIR/ambiguous-import-visibility-globglob.rs:27:26
   |
LL |     pub(crate) use self::S as S2;
   |                          ^
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `S` could refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:22:13
   |
LL |     pub use crate::m::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
note: `S` could also refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:21:9
   |
LL |     use crate::m::*;
   |         ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #149145 <https://github.com/rust-lang/rust/issues/149145>

error: ambiguous import visibility: pub or pub(in crate::max_vis_first)
  --> $DIR/ambiguous-import-visibility-globglob.rs:38:19
   |
LL |     pub use self::S as S1;
   |                   ^
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `S` could refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:34:13
   |
LL |     pub use crate::m::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
note: `S` could also refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:35:9
   |
LL |     use crate::m::*;
   |         ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #149145 <https://github.com/rust-lang/rust/issues/149145>

error: ambiguous import visibility: pub(crate) or pub(in crate::max_vis_first)
  --> $DIR/ambiguous-import-visibility-globglob.rs:41:26
   |
LL |     pub(crate) use self::S as S2;
   |                          ^
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `S` could refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:34:13
   |
LL |     pub use crate::m::*;
   |             ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
note: `S` could also refer to the struct imported here
  --> $DIR/ambiguous-import-visibility-globglob.rs:35:9
   |
LL |     use crate::m::*;
   |         ^^^^^^^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #149145 <https://github.com/rust-lang/rust/issues/149145>

error: aborting due to 6 previous errors

